
phpQLAdmin 2.3.6 TO BE ANNOUNCED
	Bug fixes
	  - Better regexp to try to find out if a value is a DN in include/pql_formating.inc:pql_format_table_single()' 
	  - If there's no web server containers, we must still return the list of physical hosts in
	    include/pql_websrv.inc:pql_websrv_get_data(). This so that we can retreive any QLC objects
	    in those physical hosts.

phpQLAdmin 2.3.5 Dec  2 2006
	Bug fixes
	  - Correctly verify user (different depending on what PQL_CONF_REFERENCE_USERS_WITH
	    is set to - uid or sn).
	  - pql_format_error_span() needs to be prefixed/called with 'echo' to get any
	    output.
	  - Faulty include/attrib.dnszone.inc:attribute_translate_type(). Tried to verify
	    $_REQUEST["attrib"] instead of param to function ('$attrib').
	  - Form value 'type' was overwritten by a hidden input in include/attrib.dnszone.inc:attribute_print_form().
	  - The pql_search() might return a 'flat' array in include/pql_bind9.inc:pql_bind9_update_serial(),
	    therefor check both 'is_array($object[0])' AND 'is_array($object)'.
	  - Setup missing $_REQUEST["view"] value _before_ any pql_generate_button().
	  - Send '&mark=yes' to tools/navbutton.php IF the button is mentioned in $_REQUEST["view"].
	  - In tools/navbutton.php, make the text red if called with the 'mark' value.
	  - pql_get_status() might return empty array in status_ldap.php, so can't check
	    for just '$tmp'. Use $tmp[createtimestamp] and $tmp[monitortimestamp].
	  - In include/pql_status.inc:pql_get_status(), the call to count($entry[0][$attrib])
	    might return '2'. This mean '0' and '1' but '1' is empty. Deduct one from the
	    count to make sure we get the value correctly.
	  - ldap_read() must be called with additional fourth parameter (attributes to
	    retreive) as 'array(+)' if one wants the operational attributes. This works
	    on OpenLDAP, but might break other LDAP servers...
	  - Ignore a missing serverip form value if more than one web server container is